WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145119
Fix uninitialized warnings in RealtimeMediaSourceCenterOwr.cpp
https://bugs.webkit.org/show_bug.cgi?id=145119
Summary
Fix uninitialized warnings in RealtimeMediaSourceCenterOwr.cpp
Csaba Osztrogonác
Reported
2015-05-18 02:22:34 PDT
./../Source/WebCore/platform/mediastream/openwebrtc/RealtimeMediaSourceCenterOwr.cpp:94:9: warning: variable 'types' is uninitialized when used here [-Wuninitialized] ../../Source/WebCore/platform/mediastream/openwebrtc/RealtimeMediaSourceCenterOwr.cpp:92:14: note: initialize the variable 'types' to silence this warning ../../Source/WebCore/platform/mediastream/openwebrtc/RealtimeMediaSourceCenterOwr.cpp:157:18: warning: variable 'sourceType' is used uninitialized whenever 'if' condition is false [-Wsometimes-uninitialized] ( This file introduced in
http://trac.webkit.org/changeset/181893
. )
Attachments
Patch
(2.16 KB, patch)
2015-05-18 02:25 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(2.16 KB, patch)
2015-05-18 02:38 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-05-18 02:25:16 PDT
Created
attachment 253315
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-05-18 02:38:46 PDT
Created
attachment 253317
[details]
Patch
Gyuyoung Kim
Comment 3
2015-05-18 18:10:18 PDT
Comment on
attachment 253317
[details]
Patch LGTM
WebKit Commit Bot
Comment 4
2015-05-18 18:39:35 PDT
Comment on
attachment 253317
[details]
Patch Clearing flags on attachment: 253317 Committed
r184537
: <
http://trac.webkit.org/changeset/184537
>
WebKit Commit Bot
Comment 5
2015-05-18 18:39:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug