Fix uninitialized warnings in RealtimeMediaSourceCenterOwr.cpp https://bugs.webkit.org/show_bug.cgi?id=145119

Reviewed by Gyuyoung Kim.

* platform/mediastream/openwebrtc/RealtimeMediaSourceCenterOwr.cpp:
(WebCore::RealtimeMediaSourceCenterOwr::validateRequestConstraints):
(WebCore::RealtimeMediaSourceCenterOwr::mediaSourcesAvailable):


Canonical link: https://commits.webkit.org/163156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184537 268f45cc-cd09-0410-ab3c-d52691b4dbfc